# faderport-classic-mcu

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
cpp/: CMakeLists.txt  Info.plist.in
cpp/src/: app_macos.mm  bridge.cpp  bridge.h  encoder.cpp  encoder.h  faderport.cpp  faderport.h  main.cpp  mappings.h  mcu.cpp  mcu.h
faderport_mcu/: __init__.py  __main__.py  bridge.py  encoder.py  faderport.py  mappings.py  mcu.py
